--- a/client/package.json
+++ b/client/package.json
@@ -6,21 +6,27 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/gsap": "^3.0.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "gsap": "^3.9.1",
+    "lottie-web": "^5.9.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-native-web": "^0.17.7",
     "react-scripts": "5.0.0",
     "react-social-icons": "^5.13.0",
+    "react-use": "^17.3.2",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run build",
+    "start-client": "react-scripts start",
+    "build": "react-scripts build &&rm -rf ../server/build && mv build ../server",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
